# Meadows-ECS

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_DEPENDENCIES.txt  README.md
.circleci/: config.yml
cmake/: test_gcc_popcount.cpp  test_msvc_popcount.cpp
include/MeadowsECS/: BitSet.h  Component.h  ComponentRegistry.h  ComponentSet.h  Entity.h  GameObject.h  System.h  World.h
src/: BitSet.cpp  ComponentRegistry.cpp  ComponentSet.cpp  Entity.cpp  GameObject.cpp  System.cpp  World.cpp
test/: CMakeLists.txt
test/cmake/: ParseAndAddCatchTests.cmake
test/include/: TestCommons.h
test/src/: BitsetTest.cpp  ComponentRegistryTest.cpp  SystemTest.cpp  WorldTest.cpp
